[package]
name = "img_coords"
version = "0.1.0"
edition = "2021"
description = "Rust binary to scan a directory tree for images and collect their coordinates from EXIF"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3"
regex = "1"
kamadak-exif = "0.5"
latlon = "0.1"
lazy_static = "1"
serde_json = "1"
serde = "1"
clap = { version = "4", features = ["derive"]}
