[package]
name = "img_coords"
version = "0.1.2"
edition = "2021"
description = "Rust binary to scan a directory tree for images and collect their coordinates from EXIF"
license = "MIT"
homepage = "https://github.com/magnusmanske/img_coords"
repository = "https://github.com/magnusmanske/img_coords"
keywords = ["cli", "EXIF", "coordinates", "gps", "images"]
categories = ["command-line-utilities"]

[dependencies]
glob = "0.3"
regex = "1"
kamadak-exif = "0.5"
latlon = "0.1"
lazy_static = "1"
serde_json = "1"
serde = "1"
clap = { version = "4", features = ["derive"]}
